tests/NormalTests/paczka1/fuzzy1/63755503.err
Error in line 18: S749 S749 38,0
Error in line 9: PQBmKd S749 56,1
Error in line 38: j2K A67 0,0
